[metadata]
name = statistical_reliability_ml
version = 0.1.1
author = Karim Tit
author_email = titkarim@gmail.com
description = Statistical reliability estimation for Neural Networks 
classifiers = 
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering :: Artificial Intelligence 
    Intended Audience :: Science/Research
    Intended Audience :: Developers

[options]
packages = find:
python_requires = >= 3.8 
install_requires =
    numpy
    pandas
    scipy 
    tqdm
    matplotlib
    torch>=2.0

[options.packages.find]
exclude = 
    tools

[options.extras_require]
foolbox = foolbox
